@@ -21,6 +21,8 @@ Changes in 3.1 -- December 27th, 2019
     - New commands to rotate left / right
     - New raster layout mode (displays as many pages as fit in a View)
     - View settings are remembered per-document
+  - Manuscript viewer:
+    - Toolbar buttons to rotate the pages left / right
 * Bug fixes:
   - fixed #895 seeking in MIDI player during playing stops sound
   - fixed #768, now paper orientation is properly handled in New Score Wizard
